[package]
name = "trafficserver_rs"
version = "0.1.0"
authors = ["David Calavera <david@netlify.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
num_enum = "0.5.1"
thiserror = "1.0.20"

[build-dependencies]
bindgen = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[workspace]
members = ["examples/remap-example"]
